--- a/wrappers/react-native/example/.detoxrc.json
+++ b/wrappers/react-native/example/.detoxrc.json
@@ -29,7 +29,7 @@
     "emulator": {
       "type": "android.emulator",
       "device": {
-        "avdName": "Nexus_5X_API_29"
+        "avdName": "Pixel_2_API_31"
       }
     }
   },
