--- a/.github/workflows/ci-detox-android.yml
+++ b/.github/workflows/ci-detox-android.yml
@@ -134,7 +134,7 @@ jobs:
 
       - name: Download Android Emulator Image
         run: |
-          ls $ANDROID_HOME
+          ls $ANDROID_HOME/cmdline-tools/
           echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-31;google_apis;arm64-v8a"
           echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_2_API_31 --device "pixel_2" -k 'system-images;android-31;google_apis;arm64-v8a'
           $ANDROID_HOME/emulator/emulator -list-avds
