WIP. debug android ci part 8

--- a/.github/workflows/ci-detox-android.yml
+++ b/.github/workflows/ci-detox-android.yml
@@ -137,7 +137,9 @@ jobs:
           $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager list
           echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "system-images;android-30;google_apis;x86"
           echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd --force --name Pixel_2_API_31 --device "pixel_2" -k 'system-images;android-30;google_apis;x86'
+          $ANDROID_HOME/emulator/emulator -verbose -no-audio -no-boot-anim -port 15776 @Pixel_2_API_31
           $ANDROID_HOME/emulator/emulator -list-avds
+          adb devices
 
       - name: Setup Java
         uses: actions/setup-java@v2
