--- a/.github/workflows/ci-detox-android.yml
+++ b/.github/workflows/ci-detox-android.yml
@@ -152,11 +152,15 @@ jobs:
       - name: Inspect Linked Libraries
         run: ls -R android/src/main/jniLibs
 
-      - name: Detox E2E Test
+      - name: Launce android emulator
         working-directory: wrappers/react-native
         run: |
           $ANDROID_HOME/emulator/emulator -verbose -no-audio -no-boot-anim -port 15776 @Pixel_2_API_31 > /dev/null 2>&1 &
           adb devices
+
+      - name: Detox E2E Test
+        working-directory: wrappers/react-native
+        run: |
           yarn detox:android:ci
 
       - name: Archive detox failed test results
