WIP. debug android ci part 12

--- a/.github/workflows/ci-detox-android.yml
+++ b/.github/workflows/ci-detox-android.yml
@@ -155,12 +155,13 @@ jobs:
       - name: Launce android emulator
         working-directory: wrappers/react-native
         run: |
-          $ANDROID_HOME/emulator/emulator -verbose -no-audio -no-boot-anim -port 15776 @Pixel_2_API_31 > /dev/null 2>&1 &
+          nohup $ANDROID_HOME/emulator/emulator -verbose -no-audio-no-boot-anim -no-window -read-only -gpu host -quit-after-boot -port 15776 @Pixel_2_API_31 > /dev/null 2>&1 &
           adb devices
 
       - name: Detox E2E Test
         working-directory: wrappers/react-native
         run: |
+          adb devices
           yarn detox:android:ci
 
       - name: Archive detox failed test results
