--- a/.github/workflows/ci-detox-android.yml
+++ b/.github/workflows/ci-detox-android.yml
@@ -153,10 +153,14 @@ jobs:
         run: ls -R android/src/main/jniLibs
 
       - name: Launce android emulator
+        id: emu1
+        timeout-minutes: 5
+        continue-on-error: true
         working-directory: wrappers/react-native
         run: |
           echo "Starting emulator"
           nohup $ANDROID_HOME/emulator/emulator -verbose -no-audio-no-boot-anim -no-window -read-only -gpu host -port 15776 @Pixel_2_API_31 &
+          $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done'
           $ANDROID_HOME/platform-tools/adb devices
 
       - name: Detox E2E Test
@@ -164,6 +168,7 @@ jobs:
         run: |
           $ANDROID_HOME/platform-tools/adb devices
           yarn detox:android:ci
+        shell: bash
 
       - name: Archive detox failed test results
         if: failure()
