--- a/.github/workflows/ci-detox-android.yml
+++ b/.github/workflows/ci-detox-android.yml
@@ -159,7 +159,7 @@ jobs:
         working-directory: wrappers/react-native
         run: |
           echo "Starting emulator"
-          nohup $ANDROID_HOME/emulator/emulator -verbose -no-audio -no-boot-anim -no-window -read-only -gpu host -port 15776 @Pixel_2_API_31 &
+          nohup $ANDROID_HOME/emulator/emulator -verbose -no-audio -no-boot-anim -no-window -read-only -gpu host -port 15776 @Pixel_2_API_31 > /dev/null 2>&1  &
           $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done'
           $ANDROID_HOME/platform-tools/adb devices
 
